2002-04-03  Maciej Stachowiak  <mjs@apple.com>

	* src/Makefile.am: Pave the way for cutting down the exports
	list. Also, make the embed target when installing libwebcore.

2002-04-03  Maciej Stachowiak  <mjs@apple.com>

	Fixed Radar 2893361 (Two frames with same name cause memory
	trasher (likely double-free)) by implementing the mechanism KDE
	uses to guarantee unique frame names.

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::frameExists): Actually
	implement this, so that the khtml code can guarantee unique frame
	names on each page.

	* src/kwq/external.h: Prototype IFWebDataSource's frameExists:
	method here.

2002-04-03  Maciej Stachowiak  <mjs@apple.com>

	Fixed Radar 2893298 (KURL rejects spaces and other illegal but
	unambiguous characters, leading to load failures).

	* src/kwq/KWQKURL.mm: (KURL::KWQKURLPrivate::makeRef,
	KURL::normalizeRelativeURLString): Escape forbidden characters
	(ones that are never legal in a URL), except '#' (since that can
	start a fragment identifier) and '%'
	(since that can be the start of a valid escape sequence).

	(KURL::KWQKURLPrivate::KWQKURLPrivate,
	KURL::KWQKURLPrivate::compose): out of paranoia, make sure urlRef
	is set to NULL if not a valid value.

2002-04-03  Maciej Stachowiak  <mjs@apple.com>

	* src/kwq/kwqdebug.mm: (KWQGetLogLevel): Allocate and release
	NSScanner instead of using an autoreleased one, to fix Jersey
	redness whereby the regression tests leak.

2002-04-02  Darin Adler  <darin@apple.com>

	* src/kwq/kwqdebug.h: Turn off logging when xNDEBUG is defined.
	Remove unused stuff. Add checking for printf parameters.
	* src/kwq/kwqdebug.mm: Remove unused variants.

	* src/kwq/KWQApplication.mm:
	* src/kwq/KWQKGlobal.mm:
	* src/kwq/KWQKloader.mm:
	* src/kwq/KWQObject.mm:
	* src/kwq/KWQString.mm:
	* src/kwq/KWQToolTip.mm:
	* src/kwq/KWQWidget.mm:
	* src/kwq/WCPlugin.mm:
	* src/kwq/WCPluginDatabase.mm:
	* src/kwq/npapi.mm:
	Fix types in log statements caught by the compiler.
