@@ -1,3 +1,10 @@
+2002-04-03  Darin Adler  <darin@apple.com>
+
+	* src/Makefile.am: Use nmedit and strip to remove the symbols
+	we don't want to export.
+
+	* src/libwebcore.exp: Added. List of symbols exported.
+
 2002-04-03  Maciej Stachowiak  <mjs@apple.com>
 
 	* src/Makefile.am: Pave the way for cutting down the exports
